[metadata]
name = creek
version = 0.0.2
url = https://github.com/i2mint/creek
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0
author = OtoSense
description = Simple streams facade
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		streams
		facade
display_name = creek

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

